--- a/style.css
+++ b/style.css
@@ -1,70 +1,74 @@
 body{
-    background: darkgray;
+    background: #777;
+    color: #777;
+    width: 960px;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
-    width: 66.66%;
-    margin: 10px 16.66% 10px 16.67%;
+    width: 640px;
+    margin: 10px 160px 10px 160px;
     height: 100px;
-    background: white;
+    background: #ebebeb;
     text-align: center;
     line-height: 5;
 }
 
 nav{
-    width: 66.66%;
-    margin: 10px 16.66% 10px 16.67%;
+    width: 640px;
+    margin: 10px 160px 10px 160px;
     height: 100px;
-    background: white;
+    background: #ebebeb;
     text-align: center;
     line-height: 5;
 }
 
 section{
-    width: 40%;
-    margin: 10px 0% 10px 16.67%;
+    width: 495px;
+    margin: 10px 0px 10px 160px;
     height: 400px;
-    background: white;
+    background: #ebebeb;
     text-align: center;
     line-height: 5;
     float: left;
+    
 }
 
 article{
-    position: absolute;
-    background: darkgrey;
+    background: #777;
     line-height: 3;
-    color: white;
-    width: 38%;
+    color: #ebebeb;
+    width: 450px;
     height: 300px;
-    margin-left: 1%;
+    margin-left: 5px;
 }
 
 h1{
-    width: 66.66%;
-    margin: 10px 16.66% 10px 16.67%;
+    width: 400px;
+    margin: 10px 20px 10px 20px;
     height: 100px;
-    color: darkgrey;
-    background: white;
+    color: #777;
+    background: #ebebeb;
     text-align: center;
     line-height: 5;
 }
 
 p{
-    width: 66.66%;
-    margin: 10px 16.66% 10px 16.67%;
+    width: 400px;
+    margin: 10px 20px 10px 20px;
     height: 100px;
-    color: darkgrey;
-    background: white;
+    color: #777;
+    background: #ebebeb;
     text-align: center;
     line-height: 5;
 }
 
 aside{
-    width: 26%;
-    margin: 10px 16.66% 10px .66%;
+    width: 140px;
+    margin: 10px 160px 10px 5px;
     height: 400px;
-    background: white;
+    background: #ebebeb;
     text-align: center;
     line-height: 5;
     float: left;
@@ -72,10 +76,10 @@ aside{
 }
 
 footer{
-    width: 66.66%;
-    margin: 10px 16.66% 10px 16.67%;
+    width: 640px;
+    margin: 10px 160px 10px 160px;
     height: 100px;
-    background: white;
+    background: #ebebeb;
     text-align: center;
     line-height: 5;
     clear: both;
